working on summary graph

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -580,7 +580,7 @@
     "3 people viewed others significantly closer,\n",
     "And the rest (15) were somewhat neutral.\n",
     "\n",
-    "Initially I focused on the most standing out cases - however after seeing outputs from latter queries (especially closeness) I found it important to see all the people changes in distances over time."
+    "Initially I focused on the cases standing out the most - however after seeing outputs from latter queries (especially closeness) I found it important to see all the people changes in distances over time."
    ]
   },
   {
@@ -728,9 +728,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Notice that edges (and thus nodes' ditances) are represented based on sum of distances (from object Person) - that means, it's not only how particular person viewed others but also how he has been viewed by others - which is something different than I considered before as the mean. The mean was only the measure how particular person viewed others; not vice versa.\n",
+    "##### Notice that edges (and thus nodes' ditances) are represented based on sum* of distances (from object Person) - that means, it's not only how particular person viewed others but also how he has been viewed by others - which is something different than I considered before as the mean. The mean was only the measure how particular person viewed others; not vice versa.\n",
     "\n",
-    "Both example graphs show that the cook (no. 2) was quite popular, even if himself viewed himself distanced (which is interesting)."
+    "Both example graphs show that the cook (no. 2) was quite popular, even if himself viewed himself distanced (which is interesting).\n",
+    "\n",
+    "*I know this from debugging the process of graph creation"
    ]
   },
   {
@@ -847,6 +849,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let me create a summary graph, based on mean weigths for all sessions' relations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-68-e0c73e44723c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mother_no\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmean_weight_per_man\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mman_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother_no\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0msession_no\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmean_weight_per_man\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mman_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mother_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m             \u001b[0mmean_weight_per_man\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mman_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mother_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msession_no\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean_weight_per_man\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mman_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mother_no\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msession_no\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;31m# mean of incoming and outgoing relation distance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not list"
+     ]
+    }
+   ],
+   "source": [
+    "people_no = 21   # number of people\n",
+    "session_no = 26   # number of sessions\n",
+    "mean_weight_per_man = {n + 1: [[0 for p in range(session_no + 1)] for s in range(people_no + 1)] for n in range(people_no + 1)} # people_no-1 since I skip self-relation\n",
+    "for i, graph in session_graphs.items():\n",
+    "    for edge in graph.edges.data(\"weight\", default=True):\n",
+    "        man_no = edge[0]\n",
+    "        other_no = edge[1]\n",
+    "        distance = edge[2]\n",
+    "        mean_weight_per_man[man_no][other_no][i] += distance\n",
+    "        \n",
+    "# get mean weights(distances) of relations, per man per session per relation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### What groups did people created, if any?"
    ]
   },
@@ -856,6 +904,39 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary and insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I've done what I believe is a summary statistics about the data I received.\n",
+    "The data pertains to human subjective view of relations between small group of people staying in difficult conditions over the many months.\n",
+    "\n",
+    "I've transformed the data from information about points coordinates marked on charts to distances. This unfortunatelly has caused the loss about the plausible patterns people used to mark their opinions.\n",
+    "With the distances organised by people by sessions, I've lookod how those changed through time, I've created sample graphs of parallel (and mutual) relations and used the graphs to get closeness centralities. Finally I've plotted graph defined by mean closeness centralities across all sessions, and peeked into possible groups of people.\n",
+    "\n",
+    "My insights are:\n",
+    "<ul>\n",
+    "    <li>There was an important event between sessions no. 4 and 5. Majority of people felt more distanced from others afterwards.</li>\n",
+    "    <li>There is an important difference between how one view others, and how other view particular person - these however needs further investigation and consulting statistical importnace.</li>\n",
+    "    <li> People were consistent in their answers - it is worth checking other variables, like psychology test filled before the journey to Antarctics.</li>\n",
+    "    <li> </li>\n",
+    "    </ul>"
+   ]
   },
   {
    "cell_type": "code",
