More questions added

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -106,7 +106,11 @@
     "  <li>Create weighted graphs of relations, one for each session for futher use</li>\n",
     "  <li>Find how graph centrality changed over the sessions</li>\n",
     "  <li>Define and investigate the summary graph</li>\n",
+    "  <li>How do sessions' graphs vary?</li>\n",
     "  <li>Find what groups did people created</li>\n",
+    "  <li>Who was most infuential among the men?</li>\n",
+    "  <li>How one's view about others shaped the view others had about him?</li>\n",
+    "  <li>A look on statistical significances</li>\n",
     "  <li>Summary and insights</li>\n",
     "</ol>"
    ]
@@ -1128,7 +1132,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. What groups did people created, if any?"
+    "## 8. How do sessions' graphs vary?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. What groups did people created, if any?"
    ]
   },
   {
@@ -1249,7 +1267,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Summary and insights"
+    "## 10. Who was most infuential among the men?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. How one's view about others shaped the view others had about him?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. A look on statistical significances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. Summary and insights"
    ]
   },
   {
