index added to readme

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1328,10 +1328,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of edges by each session: \n",
+      "[15, 24, 26, 31, 30, 13, 15, 19, 23, 13, 20, 22, 16, 9, 18, 17, 12, 14, 13, 13, 19, 16, 6, 10, 13, 10]\n",
+      "Standard deviation of above's numbers of edges: 6.139526608969825\n",
+      "\n",
+      "Differences between consecutive edges' numbers: \n",
+      "[9, 2, 5, -1, -17, 2, 4, 4, -10, 7, 2, -6, -7, 9, -1, -5, 2, -1, 0, 6, -3, -10, 4, 3, -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total number of edges by each session: \")\n",
+    "print(edges_no_by_session)\n",
+    "print(\"Standard deviation of above's numbers of edges: \" + str(numpy.std(edges_no_by_session)))\n",
+    "difference_edges_no_by_session = []\n",
+    "for i in range(len(edges_no_by_session) - 1):\n",
+    "    difference_edges_no_by_session.append(edges_no_by_session[i+1] - edges_no_by_session[i])\n",
+    "print()   # newline\n",
+    "print(\"Differences between consecutive edges' numbers: \")\n",
+    "print(difference_edges_no_by_session)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1363,7 +1386,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# correlations"
+   ]
   },
   {
    "cell_type": "markdown",
