most infuential among the men

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -103,7 +103,7 @@
     "  <li>Define objects 'Session' and 'Person' to hold the data in useful form, organised by sessions, or by men</li>\n",
     "  <li>Find general tendency how people marked other on charts during sessions</li>\n",
     "  <li>Find general tendency how people were marked by others</li>\n",
-    "  <li>Create weighted graphs of relations, one for each session for futher use</li>\n",
+    "  <li>Create weighted graphs of relations, one for each session for further use</li>\n",
     "  <li>Find how graph centrality changed over the sessions</li>\n",
     "  <li>Define and investigate the summary graph</li>\n",
     "  <li>How do sessions' graphs vary?</li>\n",
@@ -1360,18 +1360,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Who was most infuential among the men?"
+    "## 10. Who was most infuential among the men?\n",
+    "By <a href=\"https://en.wikipedia.org/wiki/Social_influence\">influence</a> I understand a simple number of mutual connections (as previously defined). The most influential man would have the most mutual connections - best relations with the most other men. In fact, this does not necessarily mean he <i> was influential</i> - he could just be most open and friendly to others."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For session no.  1 most influential were: ['deputy technical manager', 'biologist']\n",
+      "For session no.  2 most influential were: ['ichthyologist']\n",
+      "For session no.  3 most influential were: ['ichthyologist']\n",
+      "For session no.  4 most influential were: ['ichthyologist']\n",
+      "For session no.  5 most influential were: ['ichthyologist', 'biologist', 'microbiologist']\n",
+      "For session no.  6 most influential were: ['seismologist']\n",
+      "For session no.  7 most influential were: ['biologist']\n",
+      "For session no.  8 most influential were: ['carpenter', 'biologist']\n",
+      "For session no.  9 most influential were: ['biologist']\n",
+      "For session no. 10 most influential were: ['carpenter', 'biologist', 'electronics engineer']\n",
+      "For session no. 11 most influential were: ['meteorologist']\n",
+      "For session no. 12 most influential were: ['parasitologist']\n",
+      "For session no. 13 most influential were: ['biologist']\n",
+      "For session no. 14 most influential were: ['psychologist']\n",
+      "For session no. 15 most influential were: ['carpenter', 'biologist']\n",
+      "For session no. 16 most influential were: ['biologist']\n",
+      "For session no. 17 most influential were: ['fisherman', 'medic']\n",
+      "For session no. 18 most influential were: ['biologist']\n",
+      "For session no. 19 most influential were: ['biologist']\n",
+      "For session no. 20 most influential were: ['biologist', 'radiotelegraphist']\n",
+      "For session no. 21 most influential were: ['biologist']\n",
+      "For session no. 22 most influential were: ['meteorologist']\n",
+      "For session no. 23 most influential were: ['medic']\n",
+      "For session no. 24 most influential were: ['fisherman', 'meteorologist']\n",
+      "For session no. 25 most influential were: ['parasitologist', 'botanist']\n",
+      "For session no. 26 most influential were: ['driver']\n",
+      "\n",
+      "biologist                 |  13\n",
+      "ichthyologist             |   4\n",
+      "carpenter                 |   3\n",
+      "meteorologist             |   3\n",
+      "meteorologist             |   3\n",
+      "fisherman                 |   2\n",
+      "medic                     |   2\n",
+      "parasitologist            |   2\n",
+      "deputy technical manager  |   1\n",
+      "driver                    |   1\n",
+      "seismologist              |   1\n",
+      "radiotelegraphist         |   1\n",
+      "psychologist              |   1\n",
+      "electronics engineer      |   1\n",
+      "microbiologist            |   1\n",
+      "botanist                  |   1\n",
+      "cook                      |   0\n",
+      "technician                |   0\n",
+      "chemist                   |   0\n",
+      "magnetologist             |   0\n",
+      "electrician               |   0\n"
+     ]
+    }
+   ],
    "source": [
     "# ordered list of men by number of mutual relations each session\n",
-    "\n",
-    "# "
+    "sessions_by_man_influence = {session: [] for session in range(1, session_no + 1)}\n",
+    "for i, graph in mutual_close_relations_graphs.items():\n",
+    "    for man in ppl_professions.keys():\n",
+    "        if graph.has_node(man):\n",
+    "            count = 0\n",
+    "            for node in graph.nodes():\n",
+    "                if graph.number_of_edges(man, node):\n",
+    "                    count += 1\n",
+    "            sessions_by_man_influence[i].append(count)\n",
+    "        else:\n",
+    "            sessions_by_man_influence[i].append(0)\n",
+    "            \n",
+    "list_of_influencers = []\n",
+    "for no, men in sessions_by_man_influence.items():\n",
+    "    max_influence = max(men)\n",
+    "    position = []\n",
+    "    for i, relations_no in enumerate(men):\n",
+    "        if relations_no == max_influence:\n",
+    "            position.append(i)\n",
+    "    ppl = [ppl_professions[x + 1] for x in position]\n",
+    "    list_of_influencers.append(ppl)\n",
+    "    if no < 10:\n",
+    "        print(\"For session no.  \" + str(no) + \" most influential were: \" + str(ppl))\n",
+    "    else:\n",
+    "        print(\"For session no. \" + str(no) + \" most influential were: \" + str(ppl))\n",
+    "        \n",
+    "count_total_influence_by_man = {man: 0 for man in ppl_professions.keys()}\n",
+    "for session in list_of_influencers:\n",
+    "    for man in count_total_influence_by_man.keys():\n",
+    "        if ppl_professions[man] in session:\n",
+    "            count_total_influence_by_man[man] += 1\n",
+    "print()   # newline\n",
+    "sorted_count_total_influence_by_man = {k: v for k, v in sorted(count_total_influence_by_man.items(), key=lambda item: item[1], reverse=True)}\n",
+    "for man_no, value in sorted_count_total_influence_by_man.items():\n",
+    "    print(f\"{ppl_professions[man_no]:25} | {value:3d}\")"
    ]
   },
   {
