statistical significances claims reviewed

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1614,23 +1614,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have manipulated the data and made some statement about the outcomes:<br>\n",
-    "<i>from section 3</i><br>\n",
+    "I have manipulated the data and made some statements about the outcomes:<br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;<i>from section 3</i><br>\n",
     "\"Average change for mean distance slope is slighty positive, suggesting people felt more distant over time.\"<br>\n",
     "\"Average change for average incoming distance slope is  0.0445\"<br>\n",
     "\"People were consistent in their reports.\"<br>\n",
     "\"There are significant differences between how people view others and how they were seen.\"<br>\n",
     "\n",
-    "<i>from section 6</i><br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;<i>from section 6</i><br>\n",
     "\"Closeness improved over time, contradiction to conclusion from average incoming/outgoing distance's slopes\"<br>\n",
     "\n",
-    "<i>from section 8</i><br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;<i>from section 8</i><br>\n",
     "\"Number of mutual connections was falling with passing time.\"<br>\n",
     "\n",
-    "<i>from section 10</i><br>\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;<i>from section 10</i><br>\n",
     "\"In general when people viewed others as closer to themselves, they were also viewed as closer by others\"<br>\n",
     "\n",
-    "Now I want to verify those claims by calculating the p-value for each."
+    "&nbsp;&nbsp;&nbsp;&nbsp;<i>general</i><br>\n",
+    "\"There was an important event between sessions 4 and 5\"<br>\n",
+    "\n",
+    "Now I want to verify those claims by refering to statistical significance."
    ]
   },
   {
