Graph centrality elaborated

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -942,9 +942,9 @@
    "metadata": {},
    "source": [
     "## 6. How changed the graphs centrality over the sessions?\n",
-    "Closeness centrality of a node is the reciprocal of the average shortest path distance to considered node over all n-1 reachable nodes - https://en.wikipedia.org/wiki/Closeness_centrality\n",
+    "<a href=\"https://en.wikipedia.org/wiki/Closeness_centrality\">Closeness centrality</a> of a node is the reciprocal of the average shortest path distance to considered node over all n-1 reachable nodes.\n",
     "<br><br>\n",
-    "This means that the more central a node is, the closer it is to all other nodes. On both above examples, node no. 2 is somewhat in the middle - it is closer to everybody than others are."
+    "This means that the more central a node is, the closer it is to all other nodes - <a href=\"https://networkx.github.io/documentation/stable/reference/algorithms/generated/networkx.algorithms.centrality.closeness_centrality.html\">higher values of closeness indicate higher centrality</a>. On both above examples, node no. 2 is somewhat in the middle - it is closer to everybody than others are."
    ]
   },
   {
@@ -1622,7 +1622,7 @@
     "\"There are significant differences between how people view others and how they were seen.\"<br>\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;<i>from section 6</i><br>\n",
-    "\"Closeness improved over time, contradiction to conclusion from average incoming/outgoing distance's slopes\"<br>\n",
+    "\"Graph centrality lowered with each session.\"<br>\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;<i>from section 8</i><br>\n",
     "\"Number of mutual connections was falling with passing time.\"<br>\n",
