--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -494,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how different is the way how two men marked their charts. What is also not without significance is that marking somebody as a close one does not necessarily mean he reciprocated this closeness. This is an important point which I will refer to in further observations."
+    "Notice how different is the way how two men marked their charts. What is also not without significance is that marking somebody as a close one does not necessarily mean he reciprocated this closeness. This is an important point which I will refer to in further observations (and verify in the significances' section)."
    ]
   },
   {
