--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -52,8 +52,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction\n",
+    "\n",
+    "![An example chart filled by person no. 1](img/example_entry.jpg)\n",
+    "\n",
+    "Above, you can see an example entry chart, filled up on 29.12.78.\n",
+    "Each of 21 examined people had been filling such charts during every session, which took place every two weeks.\n",
+    "On a chart, an examined person marked his subjective possition and positions of others, as he saw fit.\n",
+    "As the experiment continued, people changed their views about each other, and thus changed the positions marked\n",
+    "on those charts. This, albeit simple method give us an insight about how social standings of each individual\n",
+    "changed in regards to other interconnected changes.\n",
+    "\n",
+    "### My goal is to answer some very basic questions about how those people relations shaped 40 years ago when they were stationed near the south pole, on Antarctica's coast: \n",
+    "\n",
+    "<ol>\n",
+    "  <li>Introduction</li>\n",
+    "  <li>Glossary of terms used</li>\n",
+    "  <li>Load the data from excel as-is</li>\n",
+    "  <li>Define objects 'Session' and 'Person' to hold the data in useful form, organised by sessions, or by men</li>\n",
+    "  <li>Find general tendency how people marked other on charts during sessions</li>\n",
+    "  <li>Find general tendency how people were marked by others</li>\n",
+    "  <li>Create weighted graphs of relations, one for each session for further use</li>\n",
+    "  <li>Find how graph centrality changed over the sessions</li>\n",
+    "  <li>Define and investigate the summary graph</li>\n",
+    "  <li>Find what groups did people created</li>\n",
+    "  <li>Group persistence index</li>\n",
+    "  <li>Who was most infuential among the men?</li>\n",
+    "  <li>How influence shaped and how was it connected to input data patterns?</li>\n",
+    "  <li>How one's view about others shaped the view others had about him?</li>\n",
+    "  <li>A look on statistical significances</li>\n",
+    "  <li>Speculation: space mission predictions</li>\n",
+    "  <li>Summary and insights</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Glossary of terms used\n",
+    "(TODO)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,40 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Before I load the source data, let me explain what and why I'll be doing with it.\n",
-    "\n",
-    "![An example chart filled by person no. 1](img/example_entry.jpg)\n",
-    "\n",
-    "Above, you can see an example entry chart, filled up on 29.12.78.\n",
-    "Each of 21 examined people had been filling such charts during every session, which took place every two weeks.\n",
-    "On a chart, an examined person marked his subjective possition and positions of others, as he saw fit.\n",
-    "As the experiment continued, people changed their views about each other, and thus changed the positions marked\n",
-    "on those charts. This, albeit simple method give us an insight about how social standings of each individual\n",
-    "changed in regards to other interconnected changes.\n",
-    "\n",
-    "### My goal is to answer some very basic questions about how those people relations shaped 40 years ago when they were stationed near the south pole, on Antarctica's coast: \n",
-    "\n",
-    "<ol>\n",
-    "  <li>Load the data from excel as-is</li>\n",
-    "  <li>Define objects 'Session' and 'Person' to hold the data in useful form, organised by sessions, or by men</li>\n",
-    "  <li>Find general tendency how people marked other on charts during sessions</li>\n",
-    "  <li>Find general tendency how people were marked by others</li>\n",
-    "  <li>Create weighted graphs of relations, one for each session for further use</li>\n",
-    "  <li>Find how graph centrality changed over the sessions</li>\n",
-    "  <li>Define and investigate the summary graph</li>\n",
-    "  <li>Find what groups did people created</li>\n",
-    "  <li>Who was most infuential among the men?</li>\n",
-    "  <li>How one's view about others shaped the view others had about him?</li>\n",
-    "  <li>A look on statistical significances</li>\n",
-    "  <li>Summary and insights</li>\n",
-    "</ol>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. First, let me load and adjust the given data:"
+    "## 3. First, let me load and adjust the given data:"
    ]
   },
   {
@@ -375,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Define objects 'Session' and 'Person'\n",
+    "## 4. Define objects 'Session' and 'Person'\n",
     "During my investigation I'll transform the data into various objects.\n",
     "First, let me organise the data in two python objects by sessions and by people.(session -> data recording occuring every two week). <br>\n",
     "    Session will hold data in respect to each source data file, organising entries into lists of coordinates marked by examined people - one list for one man for each session.<br>\n",
@@ -579,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Having defined sessions and persons, now I want to get some insights about the people's relations:"
+    "## 5. Having defined sessions and persons, now I want to get some insights about the people's relations:"
    ]
   },
   {
@@ -754,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. What was general tendency how one was viewed by others?\n",
+    "## 6. What was general tendency how one was viewed by others?\n",
     "\n",
     "Simillar to the above, I'm going to check how people were viewed by the others - I want to plot the average distance from people to the particular person by each session.\n",
     "\n",
@@ -898,7 +911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Let me create wieghted graphs of relations, one for each session:"
+    "## 7. Let me create wieghted graphs of relations, one for each session:"
    ]
   },
   {
@@ -997,7 +1010,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. How changed the graphs centrality over the sessions?\n",
+    "## 8. How changed the graphs centrality over the sessions?\n",
     "<a href=\"https://en.wikipedia.org/wiki/Closeness_centrality\">Closeness centrality</a> of a node is the reciprocal of the average shortest path distance to considered node over all n-1 reachable nodes.\n",
     "<br><br>\n",
     "This means that the more central a node is, the closer it is to all other nodes - <a href=\"https://networkx.github.io/documentation/stable/reference/algorithms/generated/networkx.algorithms.centrality.closeness_centrality.html\">higher values of closeness indicate higher centrality</a>. On both above examples, node no. 2 is somewhat in the middle - it is closer to everybody than others are."
@@ -1111,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Let me create a summary graph, based on mean weigths for all sessions' relations."
+    "## 9. Let me create a summary graph, based on mean weigths for all sessions' relations."
    ]
   },
   {
@@ -1195,7 +1208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. What groups did people created, if any?"
+    "## 10. What groups did people created, if any?"
    ]
   },
   {
@@ -1456,7 +1469,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Who was most infuential among the men?\n",
+    "## 11. Group persistence index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Who was most infuential among the men?\n",
     "By <a href=\"https://en.wikipedia.org/wiki/Social_influence\">influence</a> I understand a simple number of mutual connections (as previously defined). The most influential man would have the most mutual connections - best relations with the most other men. In fact, this does not necessarily mean he <i> was influential</i> - he could just be most open and friendly to others."
    ]
   },
@@ -1570,7 +1599,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. How one's view about others shaped the view others had about him?"
+    "## 13. How influence shaped and how was it connected to input data patterns?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14. How one's view about others shaped the view others had about him?"
    ]
   },
   {
@@ -1683,7 +1728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11. A look on statistical significances"
+    "## 15. A look on statistical significances"
    ]
   },
   {
@@ -1725,7 +1770,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12. Summary and insights"
+    "## 16. Speculation: space mission predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 17. Summary and insights"
    ]
   },
   {
