some terms defined

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -94,7 +94,44 @@
    "metadata": {},
    "source": [
     "## 2. Glossary of terms used\n",
-    "(TODO)"
+    "As I was adding more sections and introduced more terms in this notebook, I was asked to gather all terms in one place. When used, I revisit those concepts and give links to definitions. Below is a list of used concepts in order of apperance:\n",
+    "\n",
+    "\n",
+    "<b>distance</b> - Men stationed on <a href=\"https://en.wikipedia.org/wiki/Henryk_Arctowski_Polish_Antarctic_Station\">Arctowski research station</a> during the examination marked their subjective possition and positions of other men on charts, as they saw fit. Check the above chart for reference. Each possible position of a marking has two coordinates. Given this coordinates I calculate <a href=\"https://en.wikipedia.org/wiki/Euclidean_distance\">Euclidean distances</a> between each marking, for each man, for each session. Because of this, for each session a man has distances from him to other men and also from every other man to himself (known from respective other charts).\n",
+    "\n",
+    "<b>closeness</b> - the term is used interchangeably with closeness centrality\n",
+    "\n",
+    "<a href=\"https://en.wikipedia.org/wiki/Closeness_centrality\"><b>closeness centrality</b></a> - a number between 0 and 1 being a ratio of the fraction of actors in the group who are reachable, to the average distance. This number describes how central is particular node in a graph - the more central a node is, the closer it is to all other nodes. In this notebook case all nodes are connected to each other, however they vary in distance to each other (each man represented by a node is linked by weighted edge to each other man - the weigth is a subjective distance how far man one felt himself from man two). In this observations case, closeness centrality varied between 0.15 and 0.35. The bigger value, the more central is particular man. In this case, the more central means the man was more <a href=\"https://en.wikipedia.org/wiki/Centrality#Betweenness_centrality\">in between</a> other men. Check <a href=\"https://www.researchgate.net/publication/328954103_Application_of_Graph_Theory_in_Social_Media\">\"Application of Graph Theory in Social Media\"</a> by Anwesha Chakraborty, Trina Dutta, Sushmita Mondal and Asoke Nath for more details.\n",
+    "\n",
+    "<b>outgoing relation</b> - the distance from particular man to other man, calculated from particular man's chart\n",
+    "\n",
+    "<b>incoming relation</b> - the distance from other man to a particualr one, calculated from other men charts\n",
+    "\n",
+    "<b>relation</b> - in this case a relation is represented by an edge in a graph. Edges are weighted which means a relation becomes a quantitive value\n",
+    "\n",
+    "<b>distance change tendency</b> - Having calculated distances for people for sessions, the tendency is a metric telling how much the value changed over time. Value of change above zero means that there is tendency for people to be see themselves far away from others - the distance value was higher with each session. Check <a href=\"https://www.sciencedirect.com/science/article/pii/S0378873318300170\">\"The Emergence and Stability of Groups in Social Networks\"</a> by Christoph Stadtfel, Károly Takács and András Vörös for more examples of how tendencies might be used in social networks.\n",
+    "\n",
+    "<b>group</b> - \n",
+    "\n",
+    "<b>graph density</b> - \n",
+    "\n",
+    "<b>clique</b> - \n",
+    "\n",
+    "<b>overlaping clique</b> - \n",
+    "\n",
+    "<b>clustering</b> - \n",
+    "\n",
+    "<b>group persistence</b> - \n",
+    "\n",
+    "<b>influence</b> - \n",
+    "\n",
+    "<b>correlation</b> - \n",
+    "\n",
+    "<b>prediction</b> - \n",
+    "\n",
+    "<b>standard deviation</b> - \n",
+    "\n",
+    "<b>statistical significance</b> - \n"
    ]
   },
   {
