--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -111,13 +111,15 @@
     "\n",
     "<b>distance change tendency</b> - Having calculated distances for people for sessions, the tendency is a metric telling how much the value changed over time. Value of change above zero means that there is tendency for people to be see themselves far away from others - the distance value was higher with each session. Check <a href=\"https://www.sciencedirect.com/science/article/pii/S0378873318300170\">\"The Emergence and Stability of Groups in Social Networks\"</a> by Christoph Stadtfel, Károly Takács and András Vörös for more examples of how tendencies might be used in social networks.\n",
     "\n",
-    "<b>group</b> - \n",
+    "<b>group</b> - I understand a group in terms of <a href=\"https://en.wikipedia.org/wiki/Social_group\">social groups</a>. Please check the link to wikipedia's article for elaborative definition. A group is a number of people (or nodes in a graph)  that are gathered together. The tricky part is to decide when given people are grouped, and when they are not - and there are many ways of mathematical interpretation of this problem. <a href=\"https://arxiv.org/abs/0906.0612\">\"Community detection in graphs\"</a> by Santo Fortunato touches the problem nicely.\n",
     "\n",
-    "<b>graph density</b> - \n",
+    "<b>graph density</b> - a ratio of the number of edges to the number of vertices in the graph - maximal density is 1 and the minimal density is 0 (max density of 1 when all vertices are connected with each other). The density is 0 for a graph without edges and 1 for a complete graph. Please notice that the density is not relevant to the session's graphs - graphs where all nodes are connected (regardless of weigths of edges).\n",
     "\n",
-    "<b>clique</b> - \n",
+    "<b>clique</b> - \"a subset whose vertices are all adjacent to each other. In social network analysis, a clique is a maximal sub-graph, whereas in graph theory it is common to call cliques also non-maximal subgraphs. Triangles are the simplest cliques, and are frequent in real networks. But larger cliques are less frequent.\" - <a href=\"https://arxiv.org/abs/0906.0612\">\"Community detection in graphs\"</a> by Santo Fortunato<br>\n",
+    "Pleace notice that under this definition, each <i>session graph</i> is a clique.\n",
+    "In practice, for each node in <i>group graphs</i> (not for sessions) I get a list of cliques on which particular node is listed and process those lists further - and this leads to an another term:\n",
     "\n",
-    "<b>overlaping clique</b> - \n",
+    "<b>overlaping clique</b> - Considering the lists of nodes which are part of a clique it may happen that some nodes are indicated on more than one list. This may lead to a situation when a node is counted more than once (see examples from point no. 10)\n",
     "\n",
     "<b>clustering</b> - \n",
     "\n",
